--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     </span>
     <h2 class="subTitle">Introduce aquí tu jugada:</h2>
     <form class="formContainer">
-        <select class="js-selection">
+        <select class="input js-selection">
             <option >Seleccione su jugada</option>
             <option >Piedra</option>
             <option >Papel</option>
@@ -26,7 +26,7 @@
         </select>
         <input type="button" value="Jugar" class="js-formBtn">
     </form>
-    <h3 class="js-varText">vamos a jugar!</h3>
+    <h3 class="varText js-varText">vamos a jugar!</h3>
     <p>Jugadora: <span class="js-resultJugadora">0</span> </p>
     <p>Ordenador: <span class="js-pText"></span>0 </p>
 </div>
