--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css"
   integrity="sha512-Avb2QiuDEEvB4bZJYdft2mNjVShBftLdPG8FJ0V7irTLQ8Uo0qcPxh4Plq7G5tGm0rU+1SPhVotteLpBERwTkw=="
   crossorigin="anonymous" referrerpolicy="no-referrer" />
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@500&display=swap" rel="stylesheet">
 <body class="body">
     <div class="container">
     <h1 class="title">Disfruta jugando a piedra, papel o Tijeras</h1>
@@ -27,8 +30,8 @@
         <input type="button" value="Jugar" class="js-formBtn">
     </form>
     <h3 class="varText js-varText">vamos a jugar!</h3>
-    <p>Jugadora: <span class="js-resultJugadora">0</span> </p>
-    <p>Ordenador: <span class="js-pText"></span>0 </p>
+    <p>Jugadora: <span class="js-resultJugadora"></span> </p>
+    <p>Ordenador: <span class="js-pText"></span> </p>
 </div>
     <script src="./js/main.js"></script>
 </body>
