--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         </select>
         <input type="button" value="Jugar" class="js-formBtn">
     </form>
-    <h3 class="varText js-varText">vamos a jugar!</h3>
+    <h3 class="varText js-varText">¡Vamos a jugar!</h3>
     <p>Jugadora: <span class="js-resultJugadora"></span> </p>
     <p>Ordenador: <span class="js-pText"></span> </p>
 </div>
