upload social preview

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@500&display=swap" rel="stylesheet">
 <body class="body">
     <div class="container">
-    <h1 class="title">Disfruta jugando a piedra, papel o Tijeras</h1>
+    <h1 class="title">Disfruta jugando a piedra, papel o tijeras</h1>
     <span class="iconsContainer">
         <i class="fa-solid fa-hand-back-fist fa-beat"></i>
         <i class="fa-solid fa-hand fa-beat-fade"></i>
@@ -21,13 +21,13 @@
     </span>
     <h2 class="subTitle">Introduce aquí tu jugada:</h2>
     <form class="formContainer">
-        <select class="input js-selection">
+        <select class="input js-selection select">
             <option >Seleccione su jugada</option>
             <option >Piedra</option>
             <option >Papel</option>
             <option>Tijeras</option>
         </select>
-        <input type="button" value="Jugar" class="js-formBtn">
+        <input type="button" value="Jugar" class="js-formBtn playBtn">
     </form>
     <h3 class="varText js-varText">¡Vamos a jugar!</h3>
     <p>Jugadora: <span class="js-resultJugadora"></span> </p>
@@ -35,4 +35,4 @@
 </div>
     <script src="./js/main.js"></script>
 </body>
-</html>
+</html> 
